[gd_scene load_steps=13 format=3 uid="uid://btp1ibsk4b7xt"]

[ext_resource type="PackedScene" uid="uid://dtilpyyc3gkh2" path="res://Scene/bird.tscn" id="1_5nf66"]
[ext_resource type="Texture2D" uid="uid://bwf5i0qyei8n0" path="res://Assets/background-day.png" id="1_awsh2"]
[ext_resource type="Script" path="res://Scene/GameManager.gd" id="1_ww3ei"]
[ext_resource type="PackedScene" uid="uid://cd7m1vf4tvbf5" path="res://Scene/ground.tscn" id="2_r6kxm"]
[ext_resource type="Script" path="res://Scripts/pipe_spawner.gd" id="3_kjkin"]
[ext_resource type="PackedScene" uid="uid://3o0d528vtdwf" path="res://Scene/fade.tscn" id="6_binhv"]
[ext_resource type="PackedScene" uid="uid://dtsfutbumtxem" path="res://Scene/UI.tscn" id="7_u8p8e"]
[ext_resource type="AudioStream" uid="uid://c6cy28k6k6cpa" path="res://Assets/audio/vine-boom.mp3" id="8_ceqfi"]
[ext_resource type="AudioStream" uid="uid://b0flpfkjlntp0" path="res://Assets/audio/megakharosh.mp3" id="9_fuylo"]
[ext_resource type="AudioStream" uid="uid://x0br1kbl1nnv" path="res://Assets/audio/povezlo-povezlo_je100XR.mp3" id="10_ct0ce"]
[ext_resource type="AudioStream" uid="uid://di0mwpuri8xtb" path="res://Assets/audio/sad-meow-song.mp3" id="11_0pq8f"]
[ext_resource type="AudioStream" uid="uid://belk35jgncc3m" path="res://Assets/audio/chill-guy.mp3" id="12_wwsk8"]

[node name="main" type="Node"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_ww3ei")

[node name="World" type="Node" parent="."]

[node name="Background" type="Sprite2D" parent="World"]
texture_filter = 1
texture = ExtResource("1_awsh2")

[node name="PipeSpawner" type="Node" parent="."]
script = ExtResource("3_kjkin")

[node name="SpawnTimer" type="Timer" parent="PipeSpawner"]
wait_time = 2.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Bird" parent="." instance=ExtResource("1_5nf66")]

[node name="Ground" parent="." instance=ExtResource("2_r6kxm")]
position = Vector2(24, 200)

[node name="Fade" parent="." instance=ExtResource("6_binhv")]

[node name="UI" parent="." instance=ExtResource("7_u8p8e")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ceqfi")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_fuylo")

[node name="tenSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ct0ce")

[node name="deathSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_0pq8f")

[node name="FlySoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_wwsk8")
parameters/looping = true
